[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/components/Clover/Clover.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/clover/hana.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/clover/yotsuba.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/clover/tane.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/clover/mitsuba.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/clover/special.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/effects/growth.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hana",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "yotsuba",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "tane",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "mitsuba",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "special",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 50 )

[node name="Clover" type="Node2D"]
script = ExtResource( 1 )

[node name="SpriteAnimations" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "tane"

[node name="GrowthSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="TouchArea" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TouchArea"]
shape = SubResource( 2 )
[connection signal="input_event" from="TouchArea" to="." method="_on_TouchArea_input_event"]
